[gd_scene load_steps=54 format=4 uid="uid://c7b61am6krfjm"]

[ext_resource type="Script" uid="uid://dk4jfgiycpmhr" path="res://app/scenes/levels/nivel_01_01.gd" id="1_7vjn8"]
[ext_resource type="Texture2D" uid="uid://cari0aa4rxf1i" path="res://app/assets/graphics/environment/chao.png" id="2_k2bvm"]
[ext_resource type="PackedScene" uid="uid://4mwy5eq50v75" path="res://app/scenes/npcs/robo.tscn" id="3_53nv4"]
[ext_resource type="PackedScene" uid="uid://b16tfqsyvmt8s" path="res://app/scenes/ui/comandos.tscn" id="4_2odwg"]
[ext_resource type="PackedScene" uid="uid://cpg1qtsp0mn63" path="res://app/scenes/levels/obstaculos.tscn" id="5_8x7ff"]
[ext_resource type="PackedScene" uid="uid://ydt03gyn157p" path="res://app/scenes/levels/area_de_vitoria.tscn" id="6_qf6be"]
[ext_resource type="PackedScene" uid="uid://2c7im1uovx5s" path="res://app/scenes/ui/HUD.tscn" id="7_pbagq"]
[ext_resource type="PackedScene" uid="uid://besu2iqsf3bgl" path="res://app/scenes/levels/canto_superior_esquerdo_esteira.tscn" id="8_i117c"]
[ext_resource type="PackedScene" uid="uid://ddigo23hgatqt" path="res://app/scenes/levels/canto_inferior_direita_esteira.tscn" id="9_or2ks"]
[ext_resource type="Texture2D" uid="uid://pqqmgrt7ypkq" path="res://app/assets/graphics/environment/conveyer belt all-0001.png" id="10_xp0mj"]
[ext_resource type="Texture2D" uid="uid://dhysgy0oqvxdb" path="res://app/assets/graphics/environment/part-0001.png" id="11_0wndo"]
[ext_resource type="Texture2D" uid="uid://da4ck5xbffkqf" path="res://app/assets/graphics/environment/part-0004.png" id="12_gcq3y"]
[ext_resource type="Texture2D" uid="uid://bhc2pkmb2l54q" path="res://app/assets/graphics/environment/part-0010.png" id="13_dlup1"]
[ext_resource type="Texture2D" uid="uid://dumicjflwp4vy" path="res://app/assets/graphics/environment/part-0011.png" id="14_pxidi"]
[ext_resource type="Texture2D" uid="uid://bndq5qnyto7h" path="res://app/assets/graphics/environment/neotiles.png" id="15_4gsb2"]
[ext_resource type="AudioStream" uid="uid://bqcu0pmba6oig" path="res://app/assets/sounds/Strange Worlds.wav" id="16_k2bvm"]
[ext_resource type="Script" uid="uid://dlqmhkhxqefg5" path="res://app/scenes/levels/tutorial1_1.gd" id="17_qf6be"]
[ext_resource type="FontFile" uid="uid://bmsjq0qbtrcc1" path="res://app/assets/fonts/Pixel Game.otf" id="18_or2ks"]
[ext_resource type="VideoStream" uid="uid://dde6io00i5c86" path="res://app/assets/graphics/videos/1134.ogv" id="19_qf6be"]
[ext_resource type="Theme" uid="uid://55kbj63ivfxd" path="res://app/scenes/ui/default_btn.tres" id="20_0wndo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0pdej"]
texture = ExtResource("2_k2bvm")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
1:2/0 = 0
4:2/0 = 0
6:2/0 = 0
9:2/0 = 0
14:2/0 = 0
32:2/0 = 0
1:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
1:4/0 = 0
9:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
1:6/0 = 0
9:6/0 = 0
11:6/0 = 0
12:6/0 = 0
0:7/0 = 0
1:7/0 = 0
9:7/0 = 0
10:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
1:8/0 = 0
4:8/0 = 0
6:8/0 = 0
9:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0

[sub_resource type="TileSet" id="TileSet_yhi0f"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_0pdej")

[sub_resource type="AtlasTexture" id="AtlasTexture_5nbxw"]
atlas = ExtResource("10_xp0mj")
region = Rect2(0, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qojb"]
atlas = ExtResource("10_xp0mj")
region = Rect2(32, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_708up"]
atlas = ExtResource("10_xp0mj")
region = Rect2(64, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxq5b"]
atlas = ExtResource("10_xp0mj")
region = Rect2(96, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n04o"]
atlas = ExtResource("10_xp0mj")
region = Rect2(128, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78edu"]
atlas = ExtResource("10_xp0mj")
region = Rect2(160, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26boc"]
atlas = ExtResource("10_xp0mj")
region = Rect2(192, 960, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlbjk"]
atlas = ExtResource("10_xp0mj")
region = Rect2(224, 960, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_buexw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nbxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qojb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_708up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxq5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n04o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78edu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26boc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlbjk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3hm4c"]
atlas = ExtResource("10_xp0mj")
region = Rect2(0, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ipux"]
atlas = ExtResource("10_xp0mj")
region = Rect2(32, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irknn"]
atlas = ExtResource("10_xp0mj")
region = Rect2(64, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66qcc"]
atlas = ExtResource("10_xp0mj")
region = Rect2(96, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycwx0"]
atlas = ExtResource("10_xp0mj")
region = Rect2(128, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xrgh"]
atlas = ExtResource("10_xp0mj")
region = Rect2(160, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pocor"]
atlas = ExtResource("10_xp0mj")
region = Rect2(192, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq804"]
atlas = ExtResource("10_xp0mj")
region = Rect2(224, 832, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_34y7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hm4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ipux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irknn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66qcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycwx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xrgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pocor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq804")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6akkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_buexw"]
atlas = ExtResource("10_xp0mj")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34y7j"]
atlas = ExtResource("10_xp0mj")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0b8w"]
atlas = ExtResource("10_xp0mj")
region = Rect2(160, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lr83"]
atlas = ExtResource("10_xp0mj")
region = Rect2(192, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q51x1"]
atlas = ExtResource("10_xp0mj")
region = Rect2(224, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms7hx"]
atlas = ExtResource("10_xp0mj")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6akkn"]
atlas = ExtResource("10_xp0mj")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_joftr"]
atlas = ExtResource("10_xp0mj")
region = Rect2(64, 384, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ms7hx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buexw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34y7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0b8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lr83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q51x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms7hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6akkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joftr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xxq5b"]
texture = ExtResource("15_4gsb2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
1:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_2n04o"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_xxq5b")

[sub_resource type="Theme" id="Theme_i117c"]
default_font = ExtResource("18_or2ks")

[node name="Nivel0101" type="Node2D"]
script = ExtResource("1_7vjn8")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAEAAAAiAAEAAAAAAAIAAAAiAAEAAAAAAAMAAAAiAAEAAAAAAAQAAAAiAAEAAAABAAAAAAAiAAEAAAABAAEAAAAiAAEAAAABAAIAAAAiAAEAAAABAAMAAAAiAAEAAAABAAQAAAAiAAEAAAACAAAAAAAiAAEAAAACAAEAAAAiAAEAAAACAAIAAAAiAAEAAAACAAMAAAAiAAEAAAACAAQAAAAiAAEAAAADAAAAAAAiAAEAAAADAAEAAAAiAAEAAAADAAIAAAAiAAEAAAADAAMAAAAiAAEAAAADAAQAAAAiAAEAAAAEAAAAAAAiAAEAAAAEAAIAAAAiAAEAAAAEAAMAAAAiAAEAAAAEAAQAAAAiAAEAAAAFAAAAAAAiAAEAAAAFAAEAAAAiAAEAAAAFAAIAAAAiAAEAAAAFAAMAAAAiAAEAAAAFAAQAAAAiAAEAAAAGAAAAAAAiAAEAAAAGAAEAAAAiAAEAAAAGAAIAAAAiAAEAAAAGAAMAAAAiAAEAAAAGAAQAAAAiAAEAAAAHAAAAAAAiAAEAAAAHAAEAAAAiAAEAAAAHAAIAAAAiAAEAAAAHAAMAAAAiAAEAAAAHAAQAAAAiAAEAAAAIAAAAAAAiAAEAAAAIAAEAAAAiAAEAAAAIAAIAAAAiAAEAAAAIAAMAAAAiAAEAAAAIAAQAAAAiAAEAAAAJAAAAAAAiAAEAAAAJAAEAAAAiAAEAAAAJAAIAAAAiAAEAAAAJAAMAAAAiAAEAAAAJAAQAAAAiAAEAAAAEAAEAAAAiAAEAAAAAAAAAAAAiAAEAAAAAAAUAAAAiAAEAAAABAAUAAAAiAAEAAAACAAUAAAAiAAEAAAADAAUAAAAiAAEAAAAEAAUAAAAiAAEAAAAFAAUAAAAiAAEAAAAGAAUAAAAiAAEAAAAHAAUAAAAiAAEAAAAIAAUAAAAiAAEAAAAJAAUAAAAiAAEAAAA=")
tile_set = SubResource("TileSet_yhi0f")

[node name="Robo" parent="." instance=ExtResource("3_53nv4")]
position = Vector2(192, 576)

[node name="Comandos" parent="." instance=ExtResource("4_2odwg")]
z_index = 2
position = Vector2(480, 32)

[node name="Limite" parent="." instance=ExtResource("5_8x7ff")]
position = Vector2(664, 785)
scale = Vector2(11, 1)

[node name="Limite2" parent="." instance=ExtResource("5_8x7ff")]
position = Vector2(673, -61)
scale = Vector2(11, 1)

[node name="Limite3" parent="." instance=ExtResource("5_8x7ff")]
position = Vector2(-63, 368)
scale = Vector2(1, 8)

[node name="Limite4" parent="." instance=ExtResource("5_8x7ff")]
position = Vector2(1342, 380)
scale = Vector2(1, 8)

[node name="AreaDeVitoria" parent="." instance=ExtResource("6_qf6be")]
position = Vector2(704, 320)

[node name="HudButtons" parent="." instance=ExtResource("7_pbagq")]
visible = false
top_level = true

[node name="CantoSuperiorEsquerdoEsteira" parent="." instance=ExtResource("8_i117c")]
position = Vector2(454, 453)

[node name="CantoInferiorDireitaEsteira" parent="." instance=ExtResource("9_or2ks")]
position = Vector2(835, 449)

[node name="Esteira1" type="StaticBody2D" parent="."]
position = Vector2(573, 446)

[node name="AreaDeObstaculo" parent="Esteira1" instance=ExtResource("5_8x7ff")]
position = Vector2(72, 5)
scale = Vector2(2, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Esteira1"]
position = Vector2(4.99997, 3.00001)
scale = Vector2(4, 3.125)
sprite_frames = SubResource("SpriteFrames_buexw")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Esteira1"]
position = Vector2(134, 3.00001)
scale = Vector2(4.0625, 3.125)
sprite_frames = SubResource("SpriteFrames_34y7j")

[node name="Esteira2" type="StaticBody2D" parent="."]
position = Vector2(838, 325)

[node name="AreaDeObstaculo" parent="Esteira2" instance=ExtResource("5_8x7ff")]
position = Vector2(-4, -126)
scale = Vector2(1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Esteira2"]
shape = SubResource("RectangleShape2D_6akkn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Esteira2"]
position = Vector2(-4.00001, -2.49999)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Esteira2"]
position = Vector2(-4, -126)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Esteira2"]
position = Vector2(-4, -249)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="Esteira3" type="StaticBody2D" parent="."]
position = Vector2(457, 816)

[node name="AreaDeObstaculo" parent="Esteira3" instance=ExtResource("5_8x7ff")]
position = Vector2(-4, -126)
scale = Vector2(1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Esteira3"]
shape = SubResource("RectangleShape2D_6akkn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Esteira3"]
position = Vector2(-4.00001, -2.49999)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Esteira3"]
position = Vector2(-4, -126)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Esteira3"]
position = Vector2(-4, -249)
scale = Vector2(3.375, 3.96875)
sprite_frames = SubResource("SpriteFrames_ms7hx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(62, 8)
scale = Vector2(1.87778, 1.48438)
texture = ExtResource("11_0wndo")

[node name="AreaDeObstaculo3" parent="Sprite2D" instance=ExtResource("5_8x7ff")]
position = Vector2(3.19526, 37.7262)
scale = Vector2(0.532544, 0.673682)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(59, 144)
scale = Vector2(1.87778, 1.48438)
texture = ExtResource("12_gcq3y")

[node name="AreaDeObstaculo2" parent="Sprite2D2" instance=ExtResource("5_8x7ff")]
position = Vector2(4.7929, 32.3367)
scale = Vector2(0.532544, 0.673682)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(196, -13)
scale = Vector2(1.87778, 1.48438)
texture = ExtResource("13_dlup1")

[node name="AreaDeObstaculo3" parent="Sprite2D3" instance=ExtResource("5_8x7ff")]
position = Vector2(-0.532539, 51.8735)
scale = Vector2(0.532544, 0.673682)

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(456, 16)
scale = Vector2(1.87778, 1.48438)
texture = ExtResource("14_pxidi")

[node name="AreaDeObstaculo3" parent="Sprite2D4" instance=ExtResource("5_8x7ff")]
position = Vector2(-0.532547, 32.3367)
scale = Vector2(0.532544, 0.673682)

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAA8AAAAEAAAAAAAQABAAAAAEAAEAAAARAA8AAAAFAAAAAAARABAAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_2n04o")

[node name="Track" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_k2bvm")
volume_db = 7.0
autoplay = true

[node name="Tutorial" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("17_qf6be")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00234926
anchor_top = 0.0626741
anchor_right = 1.00235
anchor_bottom = 1.06267
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)
metadata/_edit_use_anchors_ = true

[node name="TextoTutorial1" type="RichTextLabel" parent="Tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.271731
anchor_top = 0.151811
anchor_right = 0.733751
anchor_bottom = 0.364902
offset_left = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_i117c")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("18_or2ks")
bbcode_enabled = true
text = "Agora nós teremos que direcionar o robô e faze-lô andar até a área de segurança. 
Para isto, devemos lembrar de algumas coisas:
1º todo robô consegue executar apenas um comando por vez
2º O robô executa os comandos da paleta de comanods por ordem de esquerda pra direita, cima para baixo.

para alterar a direção que o robô se move, arraste uma dos comandos com icone de seta únidca até a paleta de comandos do robô. 
Lembrete!! O robô sempre começa direcionado para a direita!"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Video1" type="VideoStreamPlayer" parent="Tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.328113
anchor_top = 0.385794
anchor_right = 0.67267
anchor_bottom = 0.675487
offset_left = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("19_qf6be")
autoplay = true
expand = true
loop = true
metadata/_edit_use_anchors_ = true

[node name="PopUpTutorial" type="ColorRect" parent="Tutorial"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.244323
anchor_top = 0.133705
anchor_right = 0.7361
anchor_bottom = 0.800836
offset_left = 15.0
offset_top = -2.0
offset_right = 15.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.694118)
metadata/_edit_use_anchors_ = true

[node name="Comecar" type="Button" parent="Tutorial"]
layout_mode = 0
offset_left = 859.0
offset_top = 517.0
offset_right = 939.0
offset_bottom = 557.0
theme = ExtResource("20_0wndo")
text = "Começar"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Tutorial/Comecar" to="Tutorial" method="_on_comecar_pressed"]
